# random-data-generator-cli

./: Cargo.toml  README.md
src/: generator.rs  lib.rs  main.rs  main_test.rs
