[package]
name = "random-data-generator-cli"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fake = { version = "2.9.2", features = ["derive"] }
rand = "0.8.5"
clap = { version = "4.4.18", features = ["cargo"] }

