[package]
name = "random-data-generator-cli"
version = "0.1.4"
edition = "2021"
authors = ["Daniel Marcos <daniel04pessoal@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A CLI tool for creating fake data"
readme = "README.md"
homepage = "https://github.com/DanielMarcos1/random-data-generator-cli"
repository = "https://github.com/DanielMarcos1/random-data-generator-cli"
keywords = ["cli", "fake", "datagenerator"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fake = { version = "2.9.2", features = ["derive"] }
rand = "0.8.5"
clap = { version = "4.4.18", features = ["cargo"] }

